# GGJ2024

./: CMakeLists.txt  README.md
resources/shaders/opengl/: final.frag
resources/shaders/vulkan/: blinnphong.frag  final.frag  final.frag.spv
resources/textures/: assets.kra  assets.kra-autosave.kra  cat.kra  cat.png~  house.kra  house.kra~  house.png~
resources/textures/cooking/: fish.kra  fish.kra~  pan-front.kra  pan-front.kra~  pan-front.png~  pan.kra  pan.kra~  pan.png~
resources/textures/house/: bathroom.png~  bedroom.png~
resources/textures/menu/: cat.png~  cursor.kra  cursor.kra~  exit.kra  exit.kra~  exit.png~  play.kra  play.kra~  play.png~  title.png~
src/: CMakeLists.txt  consts.h  cooking.cpp  cooking.h  drawable.cpp  drawable.h  fish.cpp  fish.h  house.cpp  house.h  main.cpp  menu.cpp  menu.h  vec_math.h
